# grafana-learn

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  compose.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
docs/adr/: 0001-two-grafana-instances.md  0002-commit-jsonnet-vendor.md  0003-feature-parity-between-tracks.md  0004-grafonnet-tests-in-root-pyproject.md
docs/agents/: domain.md  issue-tracker.md
foundation-sdk/: README.md  deploy.py  pyproject.toml  sdk-api-notes.md
foundation-sdk/src/graflearn/dashboards/: fleet_overview.py  logs_drilldown.py  service_dashboard.py  traces_drilldown.py
foundation-sdk/src/graflearn/lib/: red_metrics_row.py
foundation-sdk/src/graflearn/tools/: deploy.py
foundation-sdk/tests/: test_deploy.py  test_fleet_overview.py  test_logs_drilldown.py  test_red_metrics_row.py  test_service_dashboard.py  test_traces_drilldown.py
grafonnet/: .gcx.yaml  README.md  deploy.py  grafonnet-api-notes.md  grizzly.yaml  jsonnetfile.json  jsonnetfile.lock.json
grafonnet/dashboards/: fleet-overview.jsonnet  logs-drilldown.jsonnet  placeholder.jsonnet  service-dashboard.jsonnet  traces-drilldown.jsonnet
grafonnet/lib/: red-metrics-row.libsonnet
grafonnet/tests/: test_dashboards.py
metric-generator/: main.py  requirements.txt
notes/: annotations.md  correlations.md  dashboard-links.md  data-links.md  drill-down.md  fleet-overview.md  library-panels.md  node-graph.md  service-dashboard.md  template-variables.md  transformations.md
shared/loki/: config.yaml
shared/otelcol/: config.yaml
shared/prometheus/: prometheus.yaml
shared/provisioning/: dashboards.yaml  datasources.yaml
shared/tempo/: config.yaml
tests/integration/: conftest.py  test_correlations.py  test_grafana_data.py  test_library_panels.py
