[tool.poetry]
name = "grafana-learning-lab"
version = "0.1.0"
description = "Grafana Learning Lab — Grafonnet test harness"
authors = ["rpuncel <rpuncel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pyright = "^1.1.409"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["grafonnet/tests"]
